<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TableLayout
        android:id="@+id/tabulka"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <TableRow
            android:id="@+id/radek_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/d4"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:background="@null"
                android:clickable="true"
                android:text="@string/D4" />

            <Button
                android:id="@+id/d6"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:background="@null"
                android:clickable="true"
                android:text="@string/D6" />

            <Button
                android:id="@+id/d8"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:background="@null"
                android:clickable="true"
                android:text="@string/D8" />
        </TableRow>
        <TableRow
            android:id="@+id/radek_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/d10"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:background="@null"
                android:clickable="true"
                android:text="@string/D10" />

            <Button
                android:id="@+id/d12"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:background="@null"
                android:clickable="true"
                android:text="@string/D12" />
            <Button
                android:id="@+id/d20"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:background="@null"
                android:clickable="true"
                android:text="@string/D20" />
        </TableRow>
        <TableRow
            android:id="@+id/radek_3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/d100"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:background="@null"
                android:clickable="true"
                android:text="@string/D100" />
        </TableRow>
        <TableRow
            android:id="@+id/radek_4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/jedna"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:background="@null"
                android:clickable="true"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/jedna_kostka"/>

            <Button
                android:id="@+id/dva"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:background="@null"
                android:clickable="true"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/dve_kostky" />

        </TableRow>
        <TableRow
            android:id="@+id/radek_5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <ImageView
                android:id="@+id/dice_image_1"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:src="@drawable/d6_1" />

            <ImageView
                android:id="@+id/dice_image_2"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:src="@drawable/prazdny" />
        </TableRow>

        <TableRow
            android:id="@+id/radek_6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/cislo_kostky"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:textColor="@color/black"
            android:text=""
            android:textSize="30sp"
            android:gravity="center" />
        </TableRow>

        <TableRow
            android:id="@+id/radek_7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

        <Button
            android:id="@+id/start"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:background="@null"
            android:clickable="true"
            android:text="@string/start" />
        </TableRow>
        <TableRow
            android:id="@+id/radek_8"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

        <Button
            android:id="@+id/back_hod"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:text="@string/zpet" />
    </TableRow>
    </TableLayout>
</RelativeLayout>