<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/text_uvod"
        android:textColor="#000"
        android:textSize="40sp" />

    <Button
        android:id="@+id/dice"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="200dp"
        android:background="@null"
        android:clickable="true"
        android:scaleType="fitCenter"
        android:text="@string/BUT_Kostka" />

    <Button
        android:id="@+id/generation"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="200dp"
        android:layout_marginEnd="60dp"
        android:background="@null"
        android:clickable="true"
        android:scaleType="fitCenter"
        android:text="@string/BUT_generace" />

    <Button
        android:id="@+id/about"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_centerVertical="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/generation"
        android:layout_marginEnd="60dp"
        android:background="@null"
        android:clickable="true"
        android:scaleType="fitCenter"
        android:text="@string/about" />

</RelativeLayout>